<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSS Reader</string>

    <string name="drawer_refresh">Refresh</string>
    <string name="drawer_add_feed">Add Feed</string>
    <string name="drawer_view_feed">Select Feed</string>
    <string name="drawer_remove_feed">Remove Feed</string>
    <string name="drawer_mark_all_read">Mark All as Read</string>
    <string name="drawer_open_settings">Settings</string>

    <string name="search_title">Search Articles</string>
    <string name="search_hint">Search Articles</string>
    <string name="action_share">Share Article</string>
    <string name="action_open_in_browser">Open in Browser</string>

    <string name="next">Next Article</string>

    <string name="loading_articles">Loading new articles&#8230;</string>
    <string name="refresh_failed">Refresh Failed</string>
    <string name="refresh_already_started">Refresh Already in Progress&#8230;</string>
    <string name="refresh_notification_title">RSS Refresh in Progress</string>
    <string name="refresh_notification_text">RSS Reader is refreshing your feeds</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="add_feed_label">Add RSS Feed</string>

    <string name="add_feed_title">Add a New RSS Feed</string>
    <string name="add_feed_ok">Search for Feeds</string>
    <string name="add_feed_cancel">Cancel</string>
    <string name="add_feed_hint">Feed URL</string>
    <string name="searching_for_feeds">Searching for Feeds</string>
    <string name="no_feed_to_add">No feed at that address</string>
    <string name="feed_already_present">Feed already added</string>
    <string name="feed_added">Added %s</string>
    <string name="add_feed_failure">Could not add feed from &#58; %s</string>

    <string name="add_feeds_title">Add New RSS Feeds</string>
    <string name="add_feeds_ok">Add Feeds</string>
    <string name="add_feeds_cancel">Cancel</string>
    <string name="feeds_added">Feeds Added</string>

    <string name="all_feeds">All Feeds</string>
    <string name="view_feed_title">Select Feed</string>

    <string name="remove_feed_title">Remove Feed</string>
    <string name="remove_feed_ok">Remove Feed</string>
    <string name="remove_feed_cancel">@string/cancel</string>
    <string name="remove_feed_complete">%s Removed</string>

    <string name="hide_unread_articles">Hide Read Articles</string>
    <string name="show_unread_articles">Show Read Articles</string>

    <string name="no_feeds_added">You haven\'t added any feeds.  Would you like to add one?</string>
    <string name="add_feed_prompt">add one</string>

    <string name="end_of_the_line">No more articles to read.  Do you need to refresh?</string>
    <string name="refresh_prompt">refresh</string>

    <string name="search_results_title">Search Results</string>
    <string name="no_search_results">No Matching Articles Found!</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="retention_period_title">Retention Period</string>
    <string name="days">Days</string>
    <string name="refresh_frequency_title">Refresh Frequency</string>

    <string name="backup_restore">Backup / Restore</string>
    <string name="backup">Backup Feeds</string>
    <string name="backup_message">Backup scheduled</string>

    <string name="restore">Restore Feeds</string>
    <string name="restore_prompt_title">Restore feeds?</string>
    <string name="restore_prompt_message">Would you like to restore your feeds from the cloud?\nThis will replace your current articles.</string>
    <string name="restore_prompt_cancel">@string/cancel</string>
    <string name="restore_prompt_ok">Restore</string>
    <string name="restore_progress_title">Restoring Feeds</string>
    <string name="restore_progress_message">Restoring feeds from backup</string>
    <string name="restore_failure_title">Restore failed!</string>
    <string name="restore_failure_message">Restore from the cloud has failed :(</string>
    <string name="restore_failure_ok">OK</string>
    <string name="restore_complete">Feeds restored</string>

    <string name="cancel">Cancel</string>
</resources>
